Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5218

Interop 2.5.1<->2.6 failure on test suite lustre-rsync-test test_1: ASSERTION( index >= 0 && index < LLOG_MAX_CTXTS ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.6.0
    • Lustre 2.6.0
    • server: lustre-master build # 2901
      client: 2.5.1
    • 3
    • 14552

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/c22bdcb4-f4ba-11e3-ae09-52540035b04c.

      The sub-test test_1 failed with the following error:

      test failed to respond and timed out

      MDS console

      19:05:56:Lustre: DEBUG MARKER: == lustre-rsync-test test 1: Simple Replication == 19:05:44 (1402797944)
      19:05:56:Lustre: DEBUG MARKER: lctl --device lustre-MDT0000 changelog_register -n
      19:05:56:Lustre: lustre-MDD0000: changelog on
      19:05:56:Lustre: DEBUG MARKER: lctl get_param -n mdd.lustre-MDT0000.changelog_users
      19:05:56:Lustre: DEBUG MARKER: dumpe2fs -h /dev/lvm-Role_MDS/P1 2>&1 |
      19:05:56:		grep -E -q '(ea_inode|large_xattr)'
      19:05:56:Lustre: DEBUG MARKER: dumpe2fs -h /dev/lvm-Role_MDS/P1 2>&1
      19:05:56:Lustre: DEBUG MARKER: dumpe2fs -h /dev/lvm-Role_MDS/P1 2>&1 |
      19:05:56:		grep -E -q '(ea_inode|large_xattr)'
      19:05:56:LustreError: 8689:0:(lustre_log.h:440:llog_group_get_ctxt()) ASSERTION( index >= 0 && index < LLOG_MAX_CTXTS ) failed: 
      19:05:56:LustreError: 8689:0:(lustre_log.h:440:llog_group_get_ctxt()) LBUG
      19:05:56:Pid: 8689, comm: mdt00_000
      19:05:56:
      19:05:56:Call Trace:
      19:05:56: [<ffffffffa048e895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      19:05:56: [<ffffffffa048ee97>] lbug_with_loc+0x47/0xb0 [libcfs]
      19:05:56: [<ffffffffa0849868>] llog_origin_handle_open+0x668/0x670 [ptlrpc]
      19:05:56: [<ffffffffa088db35>] tgt_llog_open+0x35/0xd0 [ptlrpc]
      19:05:56: [<ffffffffa08942cc>] tgt_request_handle+0x23c/0xac0 [ptlrpc]
      19:05:56: [<ffffffffa0843d3a>] ptlrpc_main+0xd1a/0x1980 [ptlrpc]
      19:05:56: [<ffffffffa0843020>] ? ptlrpc_main+0x0/0x1980 [ptlrpc]
      19:05:56: [<ffffffff8109ab56>] kthread+0x96/0xa0
      19:05:56: [<ffffffff8100c20a>] child_rip+0xa/0x20
      19:05:56: [<ffffffff8109aac0>] ? kthread+0x0/0xa0
      19:05:56: [<ffffffff8100c200>] ? child_rip+0x0/0x20
      19:05:56:
      19:05:56:Kernel panic - not syncing: LBUG
      19:05:56:Pid: 8689, comm: mdt00_000 Not tainted 2.6.32-431.17.1.el6_lustre.g8d5344f.x86_64 #1
      19:05:56:Call Trace:
      19:05:56: [<ffffffff8152795f>] ? panic+0xa7/0x16f
      19:05:56: [<ffffffffa048eeeb>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
      19:05:56: [<ffffffffa0849868>] ? llog_origin_handle_open+0x668/0x670 [ptlrpc]
      19:05:56: [<ffffffffa088db35>] ? tgt_llog_open+0x35/0xd0 [ptlrpc]
      19:05:56: [<ffffffffa08942cc>] ? tgt_request_handle+0x23c/0xac0 [ptlrpc]
      19:05:56: [<ffffffffa0843d3a>] ? ptlrpc_main+0xd1a/0x1980 [ptlrpc]
      19:05:56: [<ffffffffa0843020>] ? ptlrpc_main+0x0/0x1980 [ptlrpc]
      19:05:56: [<ffffffff8109ab56>] ? kthread+0x96/0xa0
      19:05:56: [<ffffffff8100c20a>] ? child_rip+0xa/0x20
      19:05:56: [<ffffffff8109aac0>] ? kthread+0x0/0xa0
      19:05:56: [<ffffffff8100c200>] ? child_rip+0x0/0x20
      19:05:56:Initializing cgroup subsys cpuset
      19:05:56:Initializing cgroup subsys cpu
      19:05:56:Linux version 2.6.32-431.17.1.el6_lustre.g8d5344f.x86_64 (jenkins@builder-2-
      

            tappro Mikhail Pershin
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: